--- a/index.html
+++ b/index.html
@@ -25,12 +25,23 @@
     </header>
     <!--Dispositivos-->
     <section id="dispositivos">
-        <button class="dispositivo"><img src="img/"></button>
-        <button class="dispositivo"><img src="img/"></button>
-        <button class="dispositivo"><img src="img/"></button>
-        <button class="dispositivo"><img src="img/"></button>
-        <button class="dispositivo"><img src="img/"></button>
-        <button class="dispositivo"><img src="img/"></button>
+        <button class="dispositivo"><img src="img/pc.png" class="img_dispo">Windows</button>
+        <button class="dispositivo"><img src="img/telef.png" class="img_dispo">Teléfono</button>
+        <button class="dispositivo"><img src="img/tablet.png" class="dispo_tall">Tablet</button>
+        <button class="dispositivo"><img src="img/tv.png" class="dispo_tall">TV</button>
+        <button class="dispositivo"><img src="img/laptop.png" class="img_dispo">Chromebook</button>
+        <button class="dispositivo"><img src="img/reloj.png" class="img_dispo">Reloj</button>
+    </section>
+<!--cuerpo de la pagina-->
+    <section id="container">
+        <h1>Juega en pantalla grande</h1>
+        <p>Google Play Juegos para PC</p>
+        <section id="juego">
+            <img src="" class="demostracion">
+            <div class="juego_info">
+                
+            </div>
+        </section>
     </section>
 
 </body>
