--- a/index.html
+++ b/index.html
@@ -34,13 +34,52 @@
     </section>
 <!--cuerpo de la pagina-->
     <section id="container">
-        <h1>Juega en pantalla grande</h1>
-        <p>Google Play Juegos para PC</p>
-        <section id="juego">
-            <img src="" class="demostracion">
-            <div class="juego_info">
+        <div class="text">
+            <h1>Juega en pantalla grande</h1>
+            <p>Google Play Juegos para PC</p>
+        </div>
+
+        <section id="line">
+            <section id="juego">
+                <img src="img/juego.png" class="demostracion">
+                <div class="juego_info">
+                    <img src="img/logo.png" class="logo_game">
+                    <div class="text_game">
+                        <h4>Arknights</h4>
+                        <p>Estrategia • Defensa de torres 4.6 &#9733;</p>
+                        <p>4.6 &#9733;</p>
+                    </div>
+                </div>
+            </section>
+
+            <section id="juego">
+                <img src="img/juego2.png" class="demostracion">
+                <div class="juego_info">
+                    <img src="img/logo2.png" class="logo_game">
+                    <div class="text_game">
+                        <h4>Arknights</h4>
+                        <p>Estrategia • Defensa de torres 4.6 &#9733;</p>
+                        <p>4.6 &#9733;</p>
+                    </div>
+                </div>
+            </section>
+
+            <section id="juego">
+                <img src="img/juego3.png" class="demostracion">
+                <div class="juego_info">
+                    <img src="img/logo3.png" class="logo_game">
+                    <div class="text_game">
+                        <h4>Arknights</h4>
+                        <p>Estrategia • Defensa de torres 4.6 &#9733;</p>
+                        <p>4.6 &#9733;</p>
+                    </div>
+                </div>
+            </section>
+
+            <section id="anuncio">
                 
-            </div>
+
+            </section>
         </section>
     </section>
 
