--- a/index.html
+++ b/index.html
@@ -77,8 +77,10 @@
             </section>
 
             <section id="anuncio">
-                
-
+                <img src="img/anuncio.png" class="anuncio">
+            </section>
+            <section id="anuncio2">
+            
             </section>
         </section>
     </section>
