--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <img src="img/logo.png" class="logo_game">
                     <div class="text_game">
                         <h4>Arknights</h4>
-                        <p>Estrategia • Defensa de torres 4.6 &#9733;</p>
+                        <p>Estrategia • Defensa de torres</p>
                         <p>4.6 &#9733;</p>
                     </div>
                 </div>
@@ -58,7 +58,7 @@
                     <img src="img/logo2.png" class="logo_game">
                     <div class="text_game">
                         <h4>Arknights</h4>
-                        <p>Estrategia • Defensa de torres 4.6 &#9733;</p>
+                        <p>Estrategia • Defensa de torres</p>
                         <p>4.6 &#9733;</p>
                     </div>
                 </div>
@@ -70,7 +70,7 @@
                     <img src="img/logo3.png" class="logo_game">
                     <div class="text_game">
                         <h4>Arknights</h4>
-                        <p>Estrategia • Defensa de torres 4.6 &#9733;</p>
+                        <p>Estrategia • Defensa de torres</p>
                         <p>4.6 &#9733;</p>
                     </div>
                 </div>
@@ -79,8 +79,20 @@
             <section id="anuncio">
                 <img src="img/anuncio.png" class="anuncio">
             </section>
-            <section id="anuncio2">
-            
+            <section class="contenedor">
+                <section id="anuncio2">
+                    <div class="info_anuncio">
+                        <img src="img/logo4.png" class="logo_game">
+                        <div class="text_game">
+                            <h3>The Ants: Underground Kingdom</h3>
+                            <p>StarUnion •  <img src="img/clasificacion.png"></p>
+                        </div>
+                        <div class="descargar">
+                            <button class="btn_descargar">Instalar en windows</button>
+                            <p>Compras directas desde la app</p>
+                        </div>
+                    </div>
+                </section>
             </section>
         </section>
     </section>
