--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
                     <img src="img/logo.png" class="logo_game">
                     <div class="text_game">
                         <h4>Arknights</h4>
-                        <p>Estrategia • Defensa de torres</p>
-                        <p>4.6 &#9733;</p>
+                        <p>Estrategia • Defensa de torres <br>4.6 &#9733;</p>
                     </div>
                 </div>
             </section>
@@ -57,9 +56,8 @@
                 <div class="juego_info">
                     <img src="img/logo2.png" class="logo_game">
                     <div class="text_game">
-                        <h4>Arknights</h4>
-                        <p>Estrategia • Defensa de torres</p>
-                        <p>4.6 &#9733;</p>
+                        <h4>Aventura Dragon Cape</h4>
+                        <p>Simulación • Agricultura <br>4.9 &#9733;</p>
                     </div>
                 </div>
             </section>
@@ -69,9 +67,66 @@
                 <div class="juego_info">
                     <img src="img/logo3.png" class="logo_game">
                     <div class="text_game">
+                        <h4>Rise of Kingdoms: Lost Crusade</h4>
+                        <p>Estrategia • 4X <br>4.6 &#9733;</p>
+                    </div>
+                </div>
+            </section>
+
+            <section id="anuncio">
+                <img src="img/anuncio.png" class="anuncio">
+            </section>
+            <section class="contenedor">
+                <section id="anuncio2">
+                    <div class="info_anuncio">
+                        <img src="img/logo4.png" class="logo_game">
+                        <div class="text_game">
+                            <h3>The Ants: Underground Kingdom</h3>
+                            <p>StarUnion •  <img src="img/clasificacion.png"></p>
+                        </div>
+                        <div class="descargar">
+                            <button class="btn_descargar">Instalar en windows</button>
+                            <p>Compras directas desde la app</p>
+                        </div>
+                    </div>
+                </section>
+            </section>
+
+        <div class="text">
+            <h1>Juega en pantalla grande</h1>
+            <p>Google Play Juegos para PC</p>
+        </div>
+
+        <section id="line">
+            <section id="juego">
+                <img src="img/juego.png" class="demostracion">
+                <div class="juego_info">
+                    <img src="img/logo.png" class="logo_game">
+                    <div class="text_game">
                         <h4>Arknights</h4>
-                        <p>Estrategia • Defensa de torres</p>
-                        <p>4.6 &#9733;</p>
+                        <p>Estrategia • Defensa de torres <br>4.6 &#9733;</p>
+                    </div>
+                </div>
+            </section>
+
+            <section id="juego">
+                <img src="img/juego2.png" class="demostracion">
+                <div class="juego_info">
+                    <img src="img/logo2.png" class="logo_game">
+                    <div class="text_game">
+                        <h4>Aventura Dragon Cape</h4>
+                        <p>Simulación • Agricultura <br>4.9 &#9733;</p>
+                    </div>
+                </div>
+            </section>
+
+            <section id="juego">
+                <img src="img/juego3.png" class="demostracion">
+                <div class="juego_info">
+                    <img src="img/logo3.png" class="logo_game">
+                    <div class="text_game">
+                        <h4>Rise of Kingdoms: Lost Crusade</h4>
+                        <p>Estrategia • 4X <br>4.6 &#9733;</p>
                     </div>
                 </div>
             </section>
