--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <section id="anuncio">
                 <img src="img/anuncio.png" class="anuncio">
             </section>
-            <section class="contenedor">
+            <section id="contenedor">
                 <section id="anuncio2">
                     <div class="info_anuncio">
                         <img src="img/logo4.png" class="logo_game">
@@ -93,54 +93,51 @@
             </section>
 
         <div class="text">
-            <h1>Juega en pantalla grande</h1>
+            <h1>Recién agregada</h1>
             <p>Google Play Juegos para PC</p>
         </div>
 
         <section id="line">
             <section id="juego">
-                <img src="img/juego.png" class="demostracion">
+                <img src="img/juego4.png" class="demostracion">
                 <div class="juego_info">
-                    <img src="img/logo.png" class="logo_game">
+                    <img src="img/logo5.png" class="logo_game">
                     <div class="text_game">
-                        <h4>Arknights</h4>
-                        <p>Estrategia • Defensa de torres <br>4.6 &#9733;</p>
+                        <h4>Star Chef 2: Cooking Game</h4>
+                        <p>Simulación • Restaurante<br>4.3 &#9733;</p>
                     </div>
                 </div>
             </section>
 
             <section id="juego">
-                <img src="img/juego2.png" class="demostracion">
+                <img src="img/juego5.png" class="demostracion">
                 <div class="juego_info">
-                    <img src="img/logo2.png" class="logo_game">
+                    <img src="img/logo6.png" class="logo_game">
                     <div class="text_game">
-                        <h4>Aventura Dragon Cape</h4>
-                        <p>Simulación • Agricultura <br>4.9 &#9733;</p>
+                        <h4>Soul Seeker: Six Knights</h4>
+                        <p>Rol • Accion y aventura <br>4.2 &#9733;</p>
                     </div>
                 </div>
             </section>
 
             <section id="juego">
-                <img src="img/juego3.png" class="demostracion">
+                <img src="img/juego6.png" class="demostracion">
                 <div class="juego_info">
-                    <img src="img/logo3.png" class="logo_game">
+                    <img src="img/logo7.png" class="logo_game">
                     <div class="text_game">
-                        <h4>Rise of Kingdoms: Lost Crusade</h4>
-                        <p>Estrategia • 4X <br>4.6 &#9733;</p>
+                        <h4>Grimvalor</h4>
+                        <p>Acción • Juegos de pelea<br>4.8 &#9733;</p>
                     </div>
                 </div>
             </section>
 
-            <section id="anuncio">
-                <img src="img/anuncio.png" class="anuncio">
-            </section>
-            <section class="contenedor">
-                <section id="anuncio2">
+            <section id="contenedor">
+                <section id="anuncio3">
                     <div class="info_anuncio">
-                        <img src="img/logo4.png" class="logo_game">
+                        <img src="img/logo8.png" class="logo_game">
                         <div class="text_game">
-                            <h3>The Ants: Underground Kingdom</h3>
-                            <p>StarUnion •  <img src="img/clasificacion.png"></p>
+                            <h3>AFK Journey</h3>
+                            <p>FARLIGHT •  <img src="img/clasificacion.png"></p>
                         </div>
                         <div class="descargar">
                             <button class="btn_descargar">Instalar en windows</button>
@@ -152,5 +149,8 @@
         </section>
     </section>
 
+    <footer>
+        
+    </footer>
 </body>
 </html>
