--- a/index.html
+++ b/index.html
@@ -150,7 +150,37 @@
     </section>
 
     <footer>
-        
+        <section id="foot">
+            <div class="one">
+               <p>Google Play</p>
+               <ul class="alaing">
+                <li class="pay">Play Pass</li>
+                <li class="pay">Play Points</li>
+                <li class="pay">Tarjetas regalo</li>
+                <li class="pay">Canjear</li>
+                <li class="pay">Política de reembolsos</li>
+               </ul> 
+            </div>
+            <div class="two">
+                <p>Niños y familia</p>
+                <ul class="alaing">
+                 <li class="pay">Guía para padres</li>
+                 <li class="pay">Compartir en familia</li>
+                </ul> 
+             </div>
+
+        </section>
+        <section id="info">
+            <ul class="info">
+                <li>Términos del Servicio</li>
+                <li>Privacidad</li>
+                <li>Información sobre Google Play</li>
+                <li>Desarrolladores</li>
+                <li> Google Store</li>
+            </ul>
+            <h3 class="info">Todos los precios incluyen IVA</h3>
+            <h3 class="cont_lang">Chile (Español)</h3>
+        </section>
     </footer>
 </body>
 </html>
