--- a/index.html
+++ b/index.html
@@ -152,34 +152,34 @@
     <footer>
         <section id="foot">
             <div class="one">
-               <p>Google Play</p>
-               <ul class="alaing">
+                <p>Google Play</p>
+                <ul class="alaing">
                 <li class="pay">Play Pass</li>
                 <li class="pay">Play Points</li>
                 <li class="pay">Tarjetas regalo</li>
                 <li class="pay">Canjear</li>
                 <li class="pay">Política de reembolsos</li>
-               </ul> 
+                </ul> 
             </div>
             <div class="two">
                 <p>Niños y familia</p>
                 <ul class="alaing">
-                 <li class="pay">Guía para padres</li>
-                 <li class="pay">Compartir en familia</li>
+                <li class="pay">Guía para padres</li>
+                <li class="pay">Compartir en familia</li>
                 </ul> 
-             </div>
+            </div>
 
         </section>
         <section id="info">
-            <ul class="info">
-                <li>Términos del Servicio</li>
-                <li>Privacidad</li>
-                <li>Información sobre Google Play</li>
-                <li>Desarrolladores</li>
-                <li> Google Store</li>
+            <ul class="list_info">
+                <li class="google_extra">Términos y condiciones</li>
+                <li class="google_extra">Privacidad</li>
+                <li class="google_extra">Acerca de Google Play</li>
+                <li class="google_extra">Desarrolladores</li>
+                <li class="google_extra">Google Store</li>
+                <p class="info">Todos los precios incluyen IVA</p>
             </ul>
-            <h3 class="info">Todos los precios incluyen IVA</h3>
-            <h3 class="cont_lang">Chile (Español)</h3>
+            <p class="lenguaje">Chile (Español)</p>
         </section>
     </footer>
 </body>
