--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!--hay un tema con la pagina esta echa la resolucion de pantalla 
+del computador del colegio y adapte la pagina para se vieara bien en esa-->
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -38,7 +39,9 @@
             <h1>Juega en pantalla grande</h1>
             <p>Google Play Juegos para PC</p>
         </div>
-
+<!--aqui hay algo que aclarar al momento de hacer la pagina los juegos 
+que aparecian eran esos pero hace como unos 6 o 5 dias actualizaron la pagina y cambiaron 
+unas cosas como los juegos que aparecen en la pagina-->
         <section id="line">
             <section id="juego">
                 <img src="img/juego.png" class="demostracion">
@@ -72,25 +75,30 @@
                     </div>
                 </div>
             </section>
-
-            <section id="anuncio">
-                <img src="img/anuncio.png" class="anuncio">
-            </section>
-            <section id="contenedor">
-                <section id="anuncio2">
-                    <div class="info_anuncio">
-                        <img src="img/logo4.png" class="logo_game">
-                        <div class="text_game">
-                            <h3>The Ants: Underground Kingdom</h3>
-                            <p>StarUnion •  <img src="img/clasificacion.png"></p>
-                        </div>
-                        <div class="descargar">
-                            <button class="btn_descargar">Instalar en windows</button>
-                            <p>Compras directas desde la app</p>
-                        </div>
+        </section>
+<!-- hice algo curioso con los anuncios el anuncio que solo tiene la imagen fue el más facil
+de hacer pero en la pagina original tiene una imagen y al lado tiene textos hechos en html
+y eso llevo un problema con el anuncio 2 en este tuve que sacar una captura de pantalla y editar 
+la imagen para sacar la informacion y el boton del anuncio y hice que el fondo de un section sea 
+la imagen que edite y ahi agregue la info el logo-->
+        <section id="anuncio">
+            <img src="img/anuncio.png" class="anuncio">
+        </section>
+        <section id="contenedor">
+            <section id="anuncio2">
+                <div class="info_anuncio">
+                    <img src="img/logo4.png" class="logo_game">
+                    <div class="text_game">
+                        <h3>The Ants: Underground Kingdom</h3>
+                        <p>StarUnion •  <img src="img/clasificacion.png"></p>
                     </div>
-                </section>
+                    <div class="descargar">
+                        <button class="btn_descargar">Instalar en windows</button>
+                        <p>Compras directas desde la app</p>
+                    </div>
+                </div>
             </section>
+        </section>
 
         <div class="text">
             <h1>Recién agregada</h1>
@@ -147,40 +155,41 @@
                 </section>
             </section>
         </section>
+<!--aqui tambien hicieron cambios en la pagina principal pero como solo 
+era de dos textos no genero ni una complicacion-->
+        <footer>
+            <section id="foot">
+                <div class="one">
+                    <p>Google Play</p>
+                    <ul class="alaing">
+                    <li class="pay">Play Pass</li>
+                    <li class="pay">Play Points</li>
+                    <li class="pay">Tarjetas regalo</li>
+                    <li class="pay">Canjear</li>
+                    <li class="pay">Política de reembolsos</li>
+                    </ul> 
+                </div>
+                <div class="two">
+                    <p>Niños y familia</p>
+                    <ul class="alaing">
+                    <li class="pay">Guía para padres</li>
+                    <li class="pay">Compartir en familia</li>
+                    </ul> 
+                </div>
+            </section>
+
+            <section id="info">
+                <ul class="list_info">
+                    <li class="google_extra">Términos y condiciones</li>
+                    <li class="google_extra">Privacidad</li>
+                    <li class="google_extra">Acerca de Google Play</li>
+                    <li class="google_extra">Desarrolladores</li>
+                    <li class="google_extra">Google Store</li>
+                    <p class="info">Todos los precios incluyen IVA</p>
+                </ul>
+                <p class="lenguaje">Chile (Español)</p>
+            </section>
+        </footer>
     </section>
-
-    <footer>
-        <section id="foot">
-            <div class="one">
-                <p>Google Play</p>
-                <ul class="alaing">
-                <li class="pay">Play Pass</li>
-                <li class="pay">Play Points</li>
-                <li class="pay">Tarjetas regalo</li>
-                <li class="pay">Canjear</li>
-                <li class="pay">Política de reembolsos</li>
-                </ul> 
-            </div>
-            <div class="two">
-                <p>Niños y familia</p>
-                <ul class="alaing">
-                <li class="pay">Guía para padres</li>
-                <li class="pay">Compartir en familia</li>
-                </ul> 
-            </div>
-
-        </section>
-        <section id="info">
-            <ul class="list_info">
-                <li class="google_extra">Términos y condiciones</li>
-                <li class="google_extra">Privacidad</li>
-                <li class="google_extra">Acerca de Google Play</li>
-                <li class="google_extra">Desarrolladores</li>
-                <li class="google_extra">Google Store</li>
-                <p class="info">Todos los precios incluyen IVA</p>
-            </ul>
-            <p class="lenguaje">Chile (Español)</p>
-        </section>
-    </footer>
 </body>
 </html>
